# Commit-Analyzer

./: .env  .env.template  .gitignore  Cargo.toml  README.md
python_module/: diff_analyzer.py  requirements.txt  test_streaming.py
src/: git.rs  main.rs  python_bridge.rs
